2007-05-20  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/log.c (Ns_LogLevel): Add the Ns_LogLevel() function which returns
	true if the given log severity level is enabled. Sometimes the message
	you need to log is expensive to construct, so you'd like to construct it
	only if it's needed.

2007-05-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/server.c: Add new function NsRegisterServerInit() which registers
	an Ns_ServerInitProc callback. These are called once for each virtual
	server, after the config file has been parsed, to allow subsystems to
	configure themselves.

	Much of the 'crazy state' of NsInitServer() has been broken out into
	Ns_ServerInitProc callbacks within each subsystem.

	* nsd/op.c (ConfigServerProxy): 
	* nsd/fastpath.c (ConfigServerFastpath):
	* nsd/url2file.c (ConfigServerUrl2File):
	* nsd/pathname.c (ConfigServerVhost):
	* nsd/returnresp.c (ConfigServerRedirects):
	* nsd/tclinit.c (ConfigServerTcl): Add Ns_ServerInitProc configuration
	callbacks. Code migrated from NsServerInit().

	* nsd/nsconf.c (NsConfUpdate): Add new hooks NsConfigRedirects() and
	NsConfigVhost() so that the per-server initialisation callbacks can be
	registered.

	* nsd/log.c: Move existing initialisation functions to top of source
	file.

	* include/ns.h (Ns_ServerInitProc):
	* nsd/main.c (ServerInit):
	* nsd/tclvar.c (NsTclCreateBuckets): Add CONST declarations.

2007-05-14  Stephen Deasey  <sdeasey@users.sf.net>

	* configure.in:
	* Makefile:
	* naviserver.rdf (removed):
	* naviserver.rdf.in (added): Auto-generate DOAP release data.

	* include/ns.h:
	* nsd/Makefile:
	* nsd/return.c:
	* nsd/returnresp.c (added): Move functions which return standard HTTP
	responses, and which may have the response HTML templated, together.

2007-05-13  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src/nsv.man: Combined all nsv_ commands into one 
	file

2007-05-13  Stephen Deasey  <sdeasey@users.sf.net>
