@@ -72,6 +72,8 @@ Ns_ModuleInit(char *server, char *module)
                                NS_TCL_TRACE_DEALLOCATE) != NS_OK) {
         return NS_ERROR;
     }
+    Ns_RegisterProcInfo(NsDbAddCmds, "nsdb:initinterp", NULL);
+    Ns_RegisterProcInfo(NsDbReleaseHandles, "nsdb:releasehandles", NULL);
 
     return NS_OK;
 }
