@@ -179,8 +179,10 @@ Ns_ModuleInit(char *server, char *module)
 
     if (first) {
         first = 0;
-        Ns_RegisterProcInfo((void *)LogRollCallback, "logroll", LogArg);
-        Ns_RegisterProcInfo((void *)LogCloseCallback, "logclose", LogArg);
+        Ns_RegisterProcInfo(LogRollCallback, "nslog:roll", LogArg);
+        Ns_RegisterProcInfo(LogCloseCallback, "nslog:close", LogArg);
+        Ns_RegisterProcInfo(LogTrace, "nslog:conntrace", LogArg);
+        Ns_RegisterProcInfo(AddCmds, "nslog:initinterp", LogArg);
     }
 
     Ns_DStringInit(&ds);
